--- a/webface/src/main/webapp/login.html
+++ b/webface/src/main/webapp/login.html
@@ -25,7 +25,19 @@
 <body>
 
     <div class="container">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">PRMA Admin</a>
+        </div>
+        <!-- /.navbar-header -->
+    </nav>
+
         <div class="row">
+
+
+
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
@@ -46,7 +58,7 @@
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="notifications.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
                         </form>
                     </div>
