--- a/webface/src/main/webapp/logs.html
+++ b/webface/src/main/webapp/logs.html
@@ -17,7 +17,8 @@
     <link href="asset/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="asset/css/prma-webface.css" rel="stylesheet">
-
+    <link href="asset/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="asset/css/bootstrap-switch.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -124,7 +125,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="notifications.html"><i class="fa fa-dashboard fa-fw"></i> Notifications</a>
+                        <a href="notifications.html"><i class="fa fa-bell fa-fw"></i> Notifications</a>
                     </li>
                     <li>
                         <a class="active" href="logs.html"><i class="fa fa-table fa-fw"></i> Logs</a>
@@ -137,89 +138,129 @@
     </nav>
 
     <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Logs</h1>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-body">
 
-                        <div class="table-responsive col-lg-10">
-                            <table class="table borderless">
+        <div class="row">
+            <div class="col-lg-12  top-buffer">
+<div><i class="fa fa-database"></i> Query DB</div>
+                            <table class="table borderless t-query top-buffer">
                                 <tbody>
                                 <tr>
-                                    <td> <label class="pull-right">
+                                    <td><label class="pull-right">
                                             Start Time:
                                         </label>
                                     </td>
-                                    <td>
-                                        <input type="text" class="form-control">
+                                    <td class="col-lg-2">
+                                        <div class="input-group input-group-sm">
+                                            <input size="16" type="text" class="form_datetime form-control" id="tq-minTime">
+                                            <span class="input-group-addon">
+                                            <i class="glyphicon glyphicon-time"></i>
+                                            </span>
+                                        </div>
                                     </td>
                                     <td><label class="pull-right">
                                         End Time:
                                         </label>
                                     </td>
-                                    <td>
-                                        <input type="text" class="form-control">
+                                    <td class="col-lg-2">
+                                        <div class="input-group input-group-sm">
+                                            <input size="16" type="text" class="form_datetime form-control" id="tq-maxTime">
+                                            <span class="input-group-addon">
+                                            <i class="glyphicon glyphicon-time"></i>
+                                            </span>
+                                        </div>
                                     </td>
-                                    <td></td>
+                                    <td>
+                                        <label class="pull-right">
+                                            Lower Level:
+                                        </label>
+                                    </td>
+                                    <td class="col-lg-1">
+                                    <div class="input-group-sm">
+                                        <select class="form-control" id="tq-llevel">
+                                            <option>TRACE</option>
+                                            <option>DEBUG</option>
+                                            <option>INFO</option>
+                                            <option>WARN</option>
+                                            <option>ERROR</option>
+                                            <option>FATAL</option>
+                                        </select>
+                                    </div>
+                                    </td>
+                                    <td>
+                                        <label class="pull-right">
+                                            Higher Level:
+                                        </label>
+                                    </td>
+                                    <td class="col-lg-1">
+                                    <div class="input-group-sm">
+                                        <select class="form-control" id="tq-hlevel">
+                                            <option>FATAL</option>
+                                            <option>ERROR</option>
+                                            <option>WARN</option>
+                                            <option>INFO</option>
+                                            <option>DEBUG</option>
+                                            <option>TRACE</option>
+                                        </select>
+                                        </div>
+                                    </td>
+                                    <td><div class="col-lg-push-1">&nbsp;&nbsp;&nbsp;</div></td>
                                 </tr>
-                                <tr>
-                                    <td><label class="pull-right">
-                                        Level:
-                                        </label>
-                                    </td>
-                                    <td>
-                                        <input type="text" class="form-control column_filter" id="col1_filter">
-                                    </td>
-                                    <td><label class="pull-right">
-                                        Logger:
-                                        </label>
-                                    </td>
-                                    <td>
-                                        <input type="text" class="form-control column_filter" id="col2_filter">
-                                    </td>
-                                    <td>
-                                        <label>Use Regex</label>
-                                        <span class="col-lg-4">
-                                            <input type="checkbox" class="form-control column_filter" id="col2_regex">
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><label class="pull-right">
-                                        Thread:
-                                        </label>
-                                    </td>
-                                    <td>
-                                        <input type="text" class="form-control column_filter" id="col4_filter">
-                                    </td>
-                                    <td><label class="pull-right">
-                                        Message:
-                                        </label>
-                                    </td>
-                                    <td>
-                                        <input type="text" class="form-control column_filter" id="col3_filter">
-                                    </td>
-                                    <td>
-                                        <label>Use Regex</label>
-                                        <span class="col-lg-4">
-                                            <input type="checkbox" class="form-control" id="col3_regex">
-                                        </span>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                            <div class="text-center">
-                                <button type="button" class="btn btn-primary">Load Logs</button>
-                            </div>
-                            <hr/>
+                        </tbody>
+                    </table>
 
+                    <table class="table borderless t-query top-buffer">
+                        <tbody>
+                            <tr>
+                                <td>
+                                <label class="pull-right">
+                                    Logger:
+                                </label>
+                            </td>
+                            <td class="col-lg-2">
+                                <input type="text" class="form-control column_filter" id="tq-logger">
+                            </td>
+                            <td>
+                                <label class="pull-right">
+                                    Thread:
+                                </label>
+                            </td>
+                            <td class="col-lg-1">
+                                <input type="text" class="form-control column_filter" id="tq-thread">
+                            </td>
+                            <td>
+                                <label class="pull-right">
+                                    Message:
+                                </label>
+                            </td>
+                            <td class="col-lg-4">
+                                <input type="text" class="form-control column_filter" id="tq-msg">
+                            </td>
+                            <td class="col-lg-1">
+                                <label class="pull-right">Fuzzy Search</label>
+                            </td>
+                            <td class="col-lg-1">
+                                <span class="col-lg-3">
+                                    <input type="checkbox" checked="true" id="tq-msg-fuzzy" data-size="mini">
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                            <div class="text-center top-buffer">
+                                <button type="button" class="btn btn-primary">
+                                <i class="fa fa-refresh"></i>&nbsp;&nbsp;Load Logs 
+                                </button>
+                                <div class="top-buffer"></div>
+                            </div>
+                            
+
+<hr/>
+</div>
+            <div class="col-lg-11">
+
+<div><i class="fa fa-file-text"></i> Query Page</div>
+<div class="top-buffer"></div>
                             <table class="table table-striped table-bordered table-hover" id="prma-log-table">
                                 <thead>
                                 <tr>
@@ -230,13 +271,30 @@
                                     <th>Thread</th>
                                 </tr>
                                 </thead>
-
+                                <tbody>
+                                     <tr class="gradeA">
+                                            <td>Gecko</td>
+                                            <td>Firefox 2.0</td>
+                                            <td>Win 98+ / OSX.2+</td>
+                                            <td class="center">1.8</td>
+                                            <td class="center">A</td>
+                                        </tr>
+                                        <tr class="gradeA">
+                                            <td>Gecko</td>
+                                            <td>Firefox 3.0</td>
+                                            <td>Win 2k+ / OSX.3+</td>
+                                            <td class="center">1.9</td>
+                                            <td class="center">A</td>
+                                        </tr>
+                                        <tr class="gradeA">
+                                            <td>Gecko</td>
+                                            <td>Camino 1.0</td>
+                                            <td>OSX.2+</td>
+                                            <td class="center">1.8</td>
+                                            <td class="center">A</td>
+                                        </tr>
+                                </tbody>
                             </table>
-                        </div>
-                    <!--</div>-->
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
                 <!-- /.panel -->
             </div>
             <!-- /.col-lg-12 -->
@@ -244,7 +302,14 @@
 
     </div>
     <!-- /#page-wrapper -->
-
+<footer>
+        <div class="text-center center-block">
+            <p><i class="fa fa-copyright"></i> <label> 2014-2015 Cai Bowen </label>&nbsp;
+             <a href="https://github.com/xKommando/PRMA" target="_blank">
+             <i class="fa fa-github"></i>
+             </p>
+        </div>
+</footer>
 </div>
 <!-- /#wrapper -->
 <a id="back-to-top" href="#"
@@ -258,8 +323,26 @@
 <script src="asset/js/metisMenu.min.js"></script>
 <script src="asset/js/jquery.dataTables.js"></script>
 <script src="asset/js/dataTables.bootstrap.js"></script>
-
+<script src="asset/js/bootstrap-datetimepicker.min.js"></script>
+<script src="asset/js/bootstrap-switch.min.js"></script>
 <script>
+
+        console.log("fk7");
+
+    $(".form_datetime").datetimepicker({
+        format: 'yyyy-mm-dd hh:ii',
+        todayHighlight: true,
+        todayBtn: true,
+        minuteStep: 1,
+        autoclose: true
+    });
+
+    $("#tq-msg-fuzzy").bootstrapSwitch();
+
+
+
+        console.log("fk6");
+
     $(function() {
         $('#side-menu').metisMenu();
     });
@@ -331,7 +414,7 @@
         var dtable = $('#prma-log-table');
         dtable.dataTable(
                 {
-                    "ajax": "http://localhost:63342/PRMA/webface/src/main/webapp/testdata.json",
+                    "ajax": "testdata.json",
                     "columns": [
                         {
                             "data": "timeCreated",
@@ -364,9 +447,12 @@
                     ]
                 }
         );
-        console.log("fk10")
+        console.log("fk10");
 
     });
+
+
+
 </script>
 
 </body>
