--- a/webface/src/main/webapp/notifications.html
+++ b/webface/src/main/webapp/notifications.html
@@ -128,7 +128,7 @@
                         <a class="active" href="notifications.html"><i class="fa fa-bell fa-fw"></i> Notifications</a>
                     </li>
                     <li>
-                        <a href="logs.html"><i class="fa fa-table fa-fw"></i> Logs</a>
+                        <a href="logs.html"><i class="fa fa-file-text  fa-fw"></i> Logs</a>
                     </li>
                 </ul>
             </div>
