preparing to switch to SBT

--- a/webface/src/main/webapp/logs.html
+++ b/webface/src/main/webapp/logs.html
@@ -209,7 +209,7 @@
                         </td>
                         <td class="col-lg-1">
                                 <span class="col-lg-3">
-                                    <input type="checkbox" checked="true" id="tq-only-except" data-size="mini">
+                                    <input type="checkbox" id="tq-only-except" data-size="mini">
                                 </span>
                         </td>
                     </tr>
