--- a/webface/web/logs.html
+++ b/webface/web/logs.html
@@ -9,6 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+
     <title>PRMA Admin</title>
 
     <link href="asset/css/bootstrap.min.css" rel="stylesheet">
@@ -16,9 +22,10 @@
     <link href="asset/css/dataTables.bootstrap.css" rel="stylesheet">
     <link href="asset/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="asset/css/prma-webface.css" rel="stylesheet">
     <link href="asset/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="asset/css/bootstrap-switch.min.css" rel="stylesheet">
+
+    <link href="asset/css/prma-webface.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -276,6 +283,7 @@
                         <th>Logger</th>
                         <th>Message</th>
                         <th>Thread</th>
+                        <th>Detail</th>
                     </tr>
                     </thead>
                 </table>
@@ -314,7 +322,7 @@
 <script src="asset/js/bootstrap-datetimepicker.min.js"></script>
 <script src="asset/js/bootstrap-switch.min.js"></script>
 
-<script src="asset/js/prma-admin.js"></script>
+<script src="asset/js/prma-admin.js?v=2"></script>
 
 </body>
 
