finished webface log view:restful webservice backend + data binding front end

--- a/webface/web/logs.html
+++ b/webface/web/logs.html
@@ -306,6 +306,9 @@
         </div>
     </footer>
 </div>
+
+
+
 <!-- /#wrapper -->
 <a id="back-to-top" href="#"
    class="btn btn-default btn-lg back-to-top text-3d" role="button"
@@ -322,7 +325,7 @@
 <script src="asset/js/bootstrap-datetimepicker.min.js"></script>
 <script src="asset/js/bootstrap-switch.min.js"></script>
 
-<script src="asset/js/prma-admin.js?v=2"></script>
+<script src="asset/js/prma-admin.js"></script>
 
 </body>
 
