log page made more intruistic; restful service tested

--- a/webface/web/logs.html
+++ b/webface/web/logs.html
@@ -275,12 +275,12 @@
 
                 <div><i class="fa fa-file-text"></i> Query Page</div>
                 <div class="top-buffer"></div>
-                <table class="table table-striped table-bordered table-hover" id="prma-log-table">
+                <table class="table table-striped table-bordered" id="prma-log-table">
                     <thead>
                     <tr>
                         <th>Time</th>
                         <th>Level</th>
-                        <th>Logger</th>
+                        <th>Location</th>
                         <th>Message</th>
                         <th>Thread</th>
                         <th>Detail</th>
