--- a/webface/web/charts.html
+++ b/webface/web/charts.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Cai Bowen">
 
     <title>PRMA Admin</title>
 
@@ -151,6 +151,19 @@
         </div>
         <!-- /.row -->
         <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Area Chart Example
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div id="morris-area-chart"></div>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+            </div>
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
